# doublecrypt-core

./: .gitignore  Cargo.toml  LICENSE  README.md  build-swift.sh  cbindgen.toml
examples/: create_image.rs  derive_key.rs  hash.rs  network_mount.rs
proto/: blockstore.proto
src/: allocator.rs  bench_tests.rs  block_store.rs  cached_store.rs  codec.rs  crypto.rs  edge_tests.rs  error.rs  ffi.rs  fs.rs  lib.rs  model.rs  network_store.rs  proto.rs  tests.rs  transaction.rs
swift/: DOUBLECRYPT.md  Package.swift
swift/.swiftpm/xcode/xcuserdata/eamonnnugent.xcuserdatad/xcschemes/: xcschememanagement.plist
swift/CDoubleCrypt/: module.modulemap
swift/Sources/DoubleCrypt/: DoubleCryptFS.swift
swift/Sources/DoubleCryptCore/: DoubleCryptFS.swift
