[package]
name = "doublecrypt-core"
version = "0.1.0"
edition = "2021"
description = "Encrypted filesystem core library with C ABI for cross-platform frontends"
license = "MIT"

[lib]
name = "doublecrypt_core"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
rand = "0.8"
blake3 = "1"
hkdf = "0.12"
sha2 = "0.10"
chacha20poly1305 = "0.10"
thiserror = "1"
zeroize = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# tests use the library directly
